legacy/public/forgejo/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/component: app
  template:
    metadata:
      name: forgejo
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/component: app
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-pvc
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:11
          volumeMounts:
            - name: data
              mountPath: "/data"
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
