legacy/public/forgejo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
  ports:
    - name: ssh-tcp
      protocol: TCP
      port: 7660
      targetPort: 7660
  loadBalancerIP: 192.168.0.13
  type: LoadBalancer
